fixing spacing issue

--- a/src/sass/Components/_notification-bar.scss
+++ b/src/sass/Components/_notification-bar.scss
@@ -36,6 +36,7 @@
             padding: 0;
             margin: 0;
             li{
+                padding: 12px 0px;
                 a{
                     h4{
                         font-weight: 400;
